k8s/mesh/kiali.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiali
  template:
    metadata:
      labels:
        app: kiali
    spec:
      serviceAccountName: kiali
      containers:
        - name: kiali
          image: quay.io/kiali/kiali:v1.82
          imagePullPolicy: Always
          ports:
            - name: api-port
              containerPort: 20001
          readinessProbe:
            httpGet:
              path: /kiali/healthz
              port: 20001
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /kiali/healthz
              port: 20001
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: kiali-config
              mountPath: /kiali-configuration
      volumes:
        - name: kiali-config
          configMap:
            name: kiali

---
apiVersion: v1
kind: Service
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
spec:
  selector:
    app: kiali
  ports:
    - name: http
      port: 20001
      targetPort: 20001
